Inverted buttons and fixed spacing

--- a/search/nick.css
+++ b/search/nick.css
@@ -184,7 +184,9 @@ text-align: left;
 }
 
 .btn-comments:hover {
-  background: #E0E0E0 ;
+  color: #fff;
+  background: #5bb75b;
+  border: solid 2px #5bb75b;
 }
 
 .btn-ss {
@@ -228,7 +230,7 @@ text-align: left;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
   margin: 0 auto;
-  width: 450px;
+  width: 470px;
   top: 0;
   left: 0;
   right: 0;
